<resources>
    <string name="app_name">Books Inventory Catalog</string>
    <string name="menu_add_test">add test item</string>
    <string name="menu_add">add item</string>
    <string name="menu_delete">delete item</string>
    <string name="main_msg">The table contains </string>
    <string name="main_msg_2"> items</string>
    <string name="editor_activity">add an item</string>
    <string name="item_name">item name</string>
    <string name="price">price</string>
    <string name="quantity">quantity</string>
    <string name="supplier">supplier</string>
    <string name="phone">phone</string>
    <string name="insert_failed">insert failed</string>
    <string name="insert_successful">insert successful</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="add_an_item">Add item to inventory</string>
    <string name="edit_item">edit item</string>
    <string name="update_failed">update failed</string>
    <string name="update_successful">update successful</string>
    <string name="unknown">unknown</string>
</resources>
