<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorActivity">


    <EditText
        android:id="@+id/edit_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/item_name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/supplier"
        android:inputType="textCapWords" />


    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone" />

</LinearLayout>